crates/jarl/tests/integration/snapshots/integration__allow_dirty__clean_git_repo.snap
---
source: crates/jarl/tests/integration/allow_dirty.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--fix\").run().normalize_os_executable_name()"
---

success: true
exit_code: 0
----- stdout -----
All checks passed!

----- stderr -----

----- args -----
check . --fix
